--- a/html.html
+++ b/html.html
@@ -149,12 +149,12 @@ margin-bottom: 30px;
 
         <h2>Our gallery</h2>
         <div class="gallery">
-        <a href="images/prinring.jpg" target="_blank">
+        <a href="images/printing.jpg" target="_blank">
           <img src="images/printing.jpg" alt="Printing at Pixel Cyber" width="300" title="Printing Services"
           data-full="images/printing.jpg">
         </a>
         <a href="images/banner.jpg" target="_blank">
-           <img src="images/banner.jpg" alt="Banner printing" width="300" title="Banner Printing"
+           <img src="images/banner.jpg" alt="banner printing" width="300" title="banner Printing"
            data-full="images/banner.jpg">
         </a>
         
@@ -209,4 +209,5 @@ lightbox.addEventListener('click', e => {
 });
 </script>
    </body>
+
 </html>
