--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ margin-bottom: 30px;
         <div class="contact-section">
         <p class="contact-info">Location: Naivasha</p>
         <p class="contact-info" >tel:0741075667</p>
-        <p class="contact-info">mailto:wambuikaren182@gmail.com</p>
+        <p class="contact-info">email:wambuikaren182@gmail.com</p>
         </div>
         <script>
 const images = document.querySelectorAll('.gallery img');
